firefox-mod-blur/profile/chrome/userChrome.css
/* ... */
/* Tabs Bar height */
:root {
  --tab-min-height: 28px !important;
}

:root #tabbrowser-tabs {
  --tab-min-height: 28px !important;
}

/* Menu Bar height */
#toolbar-menubar {
  margin-top: 0px !important;
  margin-bottom: 0px !important;
  padding-top: 0px !important;
  padding-bottom: 0px !important;
  line-height: 22px !important;
  max-height: 22px !important;
}

#navigator-toolbox {
  padding-top: 0px !important;
  padding-bottom: 0px !important;
}

/* Search Bar height */
#urlbar-container {
  --urlbar-container-height: 38px !important;
}

#urlbar-container #urlbar {
  --urlbar-toolbar-height: 38px !important;
  --urlbar-height: 30px !important;
  --urlbar-min-height: 32px !important;
}

#wrapper-urlbar-container #urlbar {
  height: var(--urlbar-height) !important;
}

/*=====================================================================
=============================== I C O N S =============================
=====================================================================*/

/* #stop-reload-button .toolbarbutton-animatable-image{
  animation-duration: 0s !important; #b263e3; #a230e8
} */

/* Set icon colors with context-fill without forcing them in svg files
about:config -> svg.context-properties.content.enabled -> true*/
@media (prefers-color-scheme: dark) {
  #PanelUI-menu-button {
    list-style-image: url(ASSETS/icons/menu.svg) !important;
  }
  :root[privatebrowsingmode="temporary"] #PanelUI-menu-button {
    list-style-image: url(ASSETS/icons/menu-private.svg) !important;
  }

  #find-button {
    list-style-image: url(ASSETS/icons/search.svg) !important;
  }

  #privatebrowsing-button {
    list-style-image: url(ASSETS/icons/private.svg) !important;
  }

  #forward-button,
  menugroup > #context-forward,
  #search-container #searchbar .search-go-button,
  #urlbar-go-button {
    list-style-image: url(ASSETS/icons/right-arrow.svg) !important;
  }

  #back-button,
  menugroup > #context-back {
    list-style-image: url(ASSETS/icons/left-arrow.svg) !important;
  }
}

@media (prefers-color-scheme: light) {
  #PanelUI-menu-button {
    list-style-image: url(ASSETS/icons/menu-light.svg) !important;
  }

  :root[privatebrowsingmode="temporary"] #PanelUI-menu-button {
    list-style-image: url(ASSETS/icons/menu-private-light.svg) !important;
  }

  #find-button {
    list-style-image: url(ASSETS/icons/search-light.svg) !important;
  }

  #privatebrowsing-button {
    list-style-image: url(ASSETS/icons/private-light.svg) !important;
  }

  #forward-button,
  menugroup > #context-forward,
  #search-container #searchbar .search-go-button,
  #urlbar-go-button {
    list-style-image: url(ASSETS/icons/right-arrow-light.svg) !important;
  }

  #back-button,
  menugroup > #context-back {
    list-style-image: url(ASSETS/icons/left-arrow-light.svg) !important;
  }
}

/*=====================================================================
============================ S E A R C H   B A R ======================
=====================================================================*/

/* Some elements border radius */
#urlbar-input-container,
#searchbar,
#urlbar-container,
#urlbar {
  border-radius: var(--firefoxcss-border-radius) !important;
}

/* Remove line in search bar below text separating search results */
#urlbar .urlbarView-body-inner {
  border-top: 0px !important;
}

/* Dont remember what this is for */
#urlbar:not(.megabar):not([focused="true"]),
#urlbar:not(.megabar):not([focused="true"]):hover {
  border-bottom: transparent;
}

/* Aligns text in the middle of search bar */
#urlbar .urlbar-input-box {
  text-align: center;
}

#urlbar {
  --autocomplete-popup-highlight-background: var(
    --firefoxcss-url-autocomplete-highlight
  ) !important;
  border: 0 !important;
  background-color: var(--firefoxcss-url-bar-bg-color) !important;
  border-bottom: var(--firefoxcss-url-border-bottom-color) !important;
  border-top: var(--firefoxcss-url-border-top-color) !important;
  box-shadow: var(--firefoxcss-url-box-shadow-color) !important;
}

/* Removes separator line at the bottom of search bar separating search buttons and menus */
.urlbarView:not([noresults]) > .search-one-offs:not([hidden]) {
  border-top: none !important;
}

/* Megabar - Popout search bar on focus */
#urlbar[breakout] {
  height: auto !important;
}

#urlbar[breakout][breakout-extend][open] {
  background-color: var(--firefoxcss-url-breakout-bar-bg-color) !important;
  border-bottom: 1px solid var(--firefoxcss-url-breakout-border-bottom-color) !important;
  border-top: var(--firefoxcss-url-border-top-color) !important;
  box-shadow: var(--firefoxcss-url-breakout-box-shadow) !important;
}

#urlbar[breakout][breakout-extend] > #urlbar-input-container,
#urlbar-input-container {
  height: var(--urlbar-height) !important;
  padding-block: 0px !important;
  padding-inline: 0px !important;
  transition: none !important;
}

#urlbar[breakout] {
  top: calc(
    (var(--urlbar-toolbar-height) - var(--urlbar-height)) / 2
  ) !important;
  left: 0 !important;
  width: 100% !important;
}

#urlbar[breakout]:not([open]){
  bottom: calc((var(--urlbar-container-height) - var(--urlbar-height)) / 2) !important;
}

/* Styling Extra search bar that you can add to firefox */
#search-container #searchbar {
  outline: 0 !important;
  border: 0 !important;
  border-radius: var(--firefoxcss-border-radius) !important;
  background-color: var(--firefoxcss-url-bar-bg-color) !important;
  border-bottom: var(--firefoxcss-url-border-bottom-color) !important;
  border-top: var(--firefoxcss-url-border-top-color) !important;
  box-shadow: var(--firefoxcss-url-box-shadow-color) !important;
}

#PopupSearchAutoComplete {
  --panel-background: var(--firefoxcss-url-breakout-bar-bg-color) !important;
}
/* ... */

